# mod_audio_fork

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  README.md  audio_pipe.cpp  audio_pipe.hpp  build.sh  lws_glue.cpp  lws_glue.h  mod_audio_fork.c  mod_audio_fork.h
tests/: README.md  mock_ws_server.py  protocol_test.sh  smoke.sh
